# cbt

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  RELEASE_NOTES_v1.1.0.md  _config.yml  build_docs.sh
.github/workflows/: docs.yml
benchmarks/: workshop_benchmarks.cpp
cmake/: cbt-config.cmake.in
docs/: README.md  api_reference.md  documentation_index.md  index.md  mathematical_foundations.md  quick_start.md  theory.md  transform_guides.md  troubleshooting.md  tutorials.md
docs/doxygen-custom/: DoxygenLayout.xml  custom.css  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  footer.html  header.html
examples/: CMakeLists.txt  cbt_demo.cpp  mapping_demo.cpp
include/cbt/: cbt.hpp  composed.hpp  dual.hpp  interval.hpp  logarithmic.hpp  mappings.hpp  modular.hpp  multiscale.hpp  odds_ratio.hpp  quaternion.hpp  residue_number_system.hpp  stern_brocot.hpp  tropical.hpp
paper/: Makefile  cbt.tex  cbt_workshop.tex
paper/submissions/: AUTHOR_CHECKLIST.md  SUBMISSION_SUMMARY.md  VENUE_STRATEGY.md
paper/submissions/arxiv_2025/: SUBMISSION_CHECKLIST.md  arxiv_metadata.txt  prepare_arxiv.sh
paper/submissions/icfp_2025/: SUBMISSION_CHECKLIST.md  cbt.tex
papers/: cbt_theory.tex  cbt_theory_extended.tex
tests/: CMakeLists.txt  test_cbt.cpp  test_cbt_comprehensive.cpp
